feat: parameterized vars

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,6 +7,6 @@
 
 - name: get vault binary
   unarchive:
-    src: https://releases.hashicorp.com/vault/1.0.3/vault_1.0.3_linux_amd64.zip
-    dest: /usr/local/bin
+    src: "{{ vault_url }}"
+    dest: "{{ vault_path }}"
     remote_src: yes
