--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,3 +3,6 @@
 yum_archive_packages:
   - wget
   - unzip
+
+vault_url: https://releases.hashicorp.com/vault/1.0.3/vault_1.0.3_linux_amd64.zip
+vault_path: /usr/local/bin/
