--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,5 +6,5 @@ yum_archive_packages:
 
 vault_url: https://releases.hashicorp.com/vault/1.0.3/vault_1.0.3_linux_amd64.zip
 vault_install_path: /usr/sbin/
-vault_log_path: /var/log/vault/
-vault_config_path: /etc/vault/
+vault_log_path: /var/log/vault
+vault_config_path: /etc/vault
