feat: test init

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,3 +9,5 @@ vault_install_path: /usr/sbin/
 vault_log_path: /var/log/vault
 vault_config_path: /etc/vault
 vault_data_path: /vault-data
+
+backend_port: []
