--- a/tasks/init.yml
+++ b/tasks/init.yml
@@ -6,5 +6,11 @@
   register: stat_result
 
 - name: initialise vault server
-  shell: export VAULT_ADDR="http://127.0.0.1:{{ backend_port }}" && vault operator init -recovery-shares=1 -recovery-threshold=1 > "{{ vault_config_path }}"/init.file
+  shell: export VAULT_ADDR="http://127.0.0.1:{{ backend_port }}" && vault operator init -key-shares=2 -key-threshold=2 > "{{ vault_config_path }}"/init.file
   when: stat_result.stat.exists == False
+
+- name: copy unseal script
+  template:
+    src: unseal.sh.j2
+    dest: /tmp/unseal.sh
+    mode: 0755
