--- a/tasks/init.yml
+++ b/tasks/init.yml
@@ -6,5 +6,10 @@
   register: stat_result
 
 - name: initialise vault server
-  shell: export VAULT_ADDR='http://127.0.0.1:8200' && vault operator init > "{{ vault_config_path }}"/init.file
+  shell: export VAULT_ADDR='http://127.0.0.1:{{ backend_port}}' && vault operator init > "{{ vault_config_path }}"/init.file
   when: stat_result.stat.exists == False
+
+- name: copy bashrc
+  template:
+    src: bashrc.j2
+    dest: /root/.bashrc
