--- a/tasks/init.yml
+++ b/tasks/init.yml
@@ -19,3 +19,8 @@
   template:
     src: bashrc.j2
     dest: /root/.bashrc
+
+- name: copy vault policy
+  copy:
+    src: policy.hcl
+    dest: "{{ vault_config_path }}/policy.hcl"
