--- a/tasks/init.yml
+++ b/tasks/init.yml
@@ -24,3 +24,9 @@
   copy:
     src: policy.hcl
     dest: "{{ vault_config_path }}/policy.hcl"
+
+- name: unseal/write secret & create policy & token for jenkins
+  shell: unseal.sh >> unseal.log
+  args:
+    chdir: /tmp/
+    creates: unseal.log
