--- a/tasks/init.yml
+++ b/tasks/init.yml
@@ -26,12 +26,14 @@
     dest: "{{ vault_config_path }}/policy.hcl"
 
 - name: unseal/write secret & create policy & token for jenkins
-  shell: /tmp/unseal.sh >> /tmp/unseal.log
+  shell: /tmp/unseal.sh
 
 - name: get token
-  shell: cat /tmp/jenkins_token
-  register: jenkins_token
-
-- name: store token in facts
-  set_fact:
-    JENKINS_TOKEN: "{{ jenkins_token.stdout }}"
+  block: 
+    - shell: cat /tmp/jenkins_token
+      register: jenkins_token
+    - set_fact:
+      JENKINS_TOKEN: "{{ jenkins_token.stdout }}"
+    - file:
+        path: /tmp/jenkins_token
+        state: absent
