--- a/tasks/init.yml
+++ b/tasks/init.yml
@@ -30,10 +30,10 @@
 
 - name: get token
   block: 
-    - shell: cat /tmp/jenkins_token
-      register: jenkins_token
-    - set_fact:
-        JENKINS_TOKEN: "{{ jenkins_token.stdout }}"
+    - fetch:
+        src: /tmp/jenkins_token
+        dest: /tmp/jenkins_token
+        flat: yes
     - file:
         path: /tmp/jenkins_token
         state: absent
